frontend/test/should_pass/set_identical_assignment.grg
using set_model_001;

rule assi {
	a:A;
	
	modify {
		eval {
			a.niceSet = a.niceSet;
			a.spiceSet = a.spiceSet;
		}
	}
}
