frontend/test/should_fail/set_004.grg
using set_model_001;

rule constAssignment {
	a:A;
	
	modify {
		eval {
			a.constStringSet = a.constStringSet | set<string>{ "bla" };
		}
	}
}